<resources>
    <string name="app_name">cherry_pick_android</string>

    <!-- gpt -->
    <string name="gpt_app_name">취트키 GPT</string>
    <string name="gpt_et">궁금한 내용을 입력하세요.</string>
    <string name="gpt_bubble">안녕하세요 취트키 GPT입니다.</string>
    <string name="mine_bubble">기사를 요약해줘</string>


    <!-- login -->
    <string name="login_intro">취업 성공의 치트키,</string>
    <string name="login_intro_2">취트키!</string>
    <string name="login_kakao">카카오로 시작하기</string>
    <string name="login_naver">네이버로 시작하기</string>
    <string name="login_explain">계정 생성시 개인정보 처리방침 및</string>
    <string name="login_explain_2">이용약관 및 사용자 정책에 동의하게 됩니다</string>

    <!-- setting-->
    <string name="setting_subtitle">반가워요!</string>
    <string name="setting_nick">이름</string>
    <string name="setting_nik_hint">닉네임을 설정해주세요.</string>
    <string name="setting_gender">성별</string>
    <string name="setting_gender_hint">성별을 선택해주세요.</string>
    <string name="setting_birth">생년월일</string>
    <string name="setting_birth_hint">YYYYMMDD</string>
    <string name="setting_woman">여성</string>
    <string name="setting_man">남성</string>
    <string name="setting_next">다음</string>

    <!-- news_search -->
    <string name="news_search_sub_title">이런 키워드는 어때요?</string>
    <string name="news_search_recent">최근 검색어</string>
    <string name="news_search_all_delete">모두 지우기</string>
    <string name="news_search_keyword">2차전지</string>


    <!-- mypage -->
    <string name="mypage_user_id">유저네임a</string>
    <string name="mypage_score_appstore">스토어 별점 남기기</string>
    <string name="mypage_user_policy">이용약관 및 사용자 정책</string>
    <string name="mypage_contacts">언론사 연락처</string>
    <string name="mypage_privacy_policy">개인정보처리방침</string>

    <!-- profile -->
    <string name="mypage_profile_setting">계정 설정</string>
    <string name="profile_leave_account">회원탈퇴</string>
    <string name="profile_name">이름</string>
    <string name="profile_sex">성별</string>
    <string name="profile_birth">생년월일</string>
    <string name="profile_job">직군 정보</string>

    <string name="profile_logout">로그아웃</string>
    <string name="profile_img_fromAlbum">앨범에서 사진 선택</string>
    <string name="profile_img_fromCamera">촬영하기</string>
    <string name="profile_img_basic">기본 이미지로 변경</string>
    <string name="profile_img_cancel">취소</string>


    <!-- menu -->
    <string name="home_menu_home">홈</string>
    <string name="home_menu_keyword">키워드</string>
    <string name="home_menu_scrap">스크랩</string>
    <string name="home_menu_my_page">마이페이지</string>
    
    <string name="sort_article_asc">오름차순</string>
    <string name="sort_article_desc">내림차순</string>
    <string name="sort_article_like">인기순</string>

    <!-- news_item -->
    <string name="item_news_title">6월 무역수지 16개월 만에 흑자, 전년\n비 자동차 수출 58% 선박 98% 늘어</string>
    <string name="item_news_editor">Business Post</string>
    <string name="item_news_dot">･</string>
    <string name="item_news_time">59분</string>
    <string name="item_news_previous">전</string>

    <!-- search_title -->
    <string name="search_title">전체</string>
    <string name="search_count">23</string>
    <string name="search_sorting">인기순</string>
    <string name="search_menu">정렬 메뉴 버튼</string>
    <string name="search_button">검색</string>

    <!-- home_news -->
    <string name="home_news_search_hint">원하는 주제를 검색하세요</string>

    <!-- keyword -->
    <string name="first_keyword_title">앗! 아직 등록된 키워드가 없어요</string>
    <string name="first_keyword_recom">이런 키워드는 어때요?</string>
    <string name="keyword_isKeyword">등록된 키워드</string>
    <string name="keyword_count_none">0</string>
    <string name="keyword_count_true">2</string>
    <string name="keyword_count_max">/10</string>
    <string name="keyword_up_lode_button">키워드 등록</string>

    <string name="first_keyword_search">이런 기사를 알려줘요!</string>
    <string name="first_keyword_search_sub">* 최신 기사 5개</string>
    <string name="keyword_search_hint">키워드를 추가해보세요 ex) IT</string>
    <string name="keyword_view">최신순으로 일주일의 키워드를 보여드려요</string>

    <!-- keyword -->
    <string name="keyword_title">키워드</string>


    <!-- recent_search -->
    <string name="recent_search_title">검색어</string>


    <!-- article -->
    <string name="article_news_title">6월 무역수지 16개월 만에 흑자,\n전년비 자동차 수출 58% 선박 98% 늘어</string>
    <string name="article_news_editor">박혜린</string>
    <string name="article_editor">기자</string>
    <string name="article_news_company">Business Post</string>
    <string name="article_image_explain">항구에서 수출선박에 오를 준비를 하고 있는 완성차 모습</string>
    <string name="article_news_dot">･</string>
    <string name="article_news_time">59분</string>
    <string name="article_news_previous">전</string>


    <string name="article_news_detail">[비즈니스포스트] 6월 무역수지가 16개월 만에 흑자로 돌아섰다. 자동차 수출이 호조세를 보인 가운데 에너지 수입이 줄어든 덕분이다.2일 산업통상자원부가 발표한 수출입 동향 자료에 따르면 6월 수출액과 수입액은 각각 542억4천만 달러, 531억1천만 달러다. 2022년 6월보다 수출은 6%, 수입은 11.7% 감소했다.\n\n

무역수지는 11억3천만 달러(약 1조4904억 원) 흑자를 보였다. 이는 2022년 2월 뒤 16개월 만의 흑자다.품목별로 수출액을 살펴보면 자동차가 62억3천만 달러(약 8조2172억 원)로 지난해 같은 기간과 비교해 수출액이 58.3% 늘어났다. 자동차는 반기 기준 수출액(356억6천만 달러)으로는 역대 최고 수출 실적을 보였다.선박 수출액은 24억8천만 달러(약 3조2711억 원)으로 98.6% 급증했다. 2차전지(9억2천만 달러)와 일반기계(44억7천만 달러) 수출액도 각각 2022년 6월보다 16.3%, 8.1% 증가했다.\n\n

반면 한국 최대 수출품목인 반도체 6월 수출액은 89억 달러(11조7391억 원)로 2022년 같은 기간보다 28% 감소했다. 석유제품(33억 달러)과 석유화학(35억6천만 달러) 수출액도 단가하락 영향으로 각각 40.9%, 22% 줄었다.지역별로는 유럽과 중동, 중남미에서 자동차, 일반기계 호조에 힘입어 수출이 늘었다. 6월 유럽과 중동, 중남미 수출액은 각각 61억9천만 달러, 16억4천만 달러, 25억4천만 달러로 2022년 6월보다 18.2%, 14%, 9.2% 증가했다.중국과 아세안지역에서는 반도체 등 IT업황 부진이 계속되면서 수출액이 각각 19%, 16.6% 줄었다.\n\n

6월 수입액은 원유(-28.6%), 석탄(-45.5%), 에너지(-27.3%), 가스(-0.3%) 수입 감소 등의 영향으로 2022년 같은 기간보다 11.7% 줄었다.에너지분야 외 반도체(-19.5%), 컴퓨터(-18.3%), 철강(-10.2%) 등 주요 품목의 수입도 감소했다. 산업부 관계자는 “이번 무역흑자 흐름을 이어나가며 하반기 수출 ‘플러스 전환’을 달성할 수 있도록 수출확대 노력과 에너지 절약확산 및 효율개선 추진에 박차를 가하겠다”며 “30대 수출 유망품목을 중심으로 마케팅 지원을 대폭 늘려가고 수출에 어려움을 겪는 중소·중견기업 대상 맞춤형 수출기업화 지원을 추진하겠다”고 말했다.</string>


    <!-- scrap -->
    <string name="scrap_name">채영</string>
    <string name="scrap_toolbar">님이 스크랩한 기사</string>
    <string name="scrap_count_none">0</string>
    <string name="scrap_count_true">23</string>
    <string name="scrap_none_message">스크랩한 기사가 없어요 :(</string>
    <string name="item_scrap_news_title">6월 무역수지 16개월 만에 흑자, 전년비\n자동차 수출 58% 선박 98% 늘어</string>
    <string name="scrap_snackbar_true">기사를 스크랩했어요!</string>
    <string name="scrap_snackbar_false">기사 스크랩을 해제했어요!</string>

    <!-- jobgroup -->
    <string name="job_change_instruction1">님이 변경을 희망하는</string>
    <string name="job_change_instruction2">직군을 선택해주세요!</string>
    <string name="job_change_instruction3">최대 3개 선택 및 추후 변경 가능합니다.</string>
    <string name="job_change_complete">완료</string>

    <!-- userdelete -->
    <string name="user_delete_title">회원탈퇴</string>
    <string name="user_delete_sub_title">회원 탈퇴 시 사용자 계정의 모든 정보가 삭제 됩니다.</string>
    <string name="user_delete_sub_title_2">정말로 탈퇴 하시겠습니까?</string>
    <string name="user_delete_no">취소</string>

    <!-- logout -->
    <string name="logout_title">알림</string>
    <string name="logout_sub_title">로그아웃 하시겠습니까?</string>
    <string name="logout_ok">로그아웃</string>
    <string name="logout_no">취소</string>
    
    <!-- gpt -->
    <string name="gpt_summary">기사 요약하기</string>
    <string name="gpt_translation">기사 영어로 번역하기</string>
    <string name="gpt_keyword">기사 키워드 보기</string>

</resources>