<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_fragment_home_news"
        android:title="@string/home_menu_home"
        android:icon="@drawable/ic_home"
        android:enabled="true"/>
    <item
        android:id="@+id/nav_fragment_keyword"
        android:title="@string/home_menu_keyword"
        android:icon="@drawable/ic_keyword"
        android:enabled="true"/>
    <item
        android:id="@+id/nav_fragment_scrap"
        android:title="@string/home_menu_scrap"
        android:icon="@drawable/ic_scrap"
        android:enabled="true"/>
    <item
        android:id="@+id/nav_fragment_my_page"
        android:title="@string/home_menu_my_page"
        android:icon="@drawable/ic_mypage"
        android:enabled="true"/>

</menu>
