<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/ibtn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_transparent"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="70dp"
        android:text="@string/setting_subtitle"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ibtn_back" />

    <LinearLayout
        android:id="@+id/linear_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title">

        <TextView
            android:id="@+id/tv_nick"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="5dp"
            android:text="@string/setting_nick"
            android:textColor="@color/gray_4" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_nick"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/setting_nik_hint"
            app:boxBackgroundColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_nick"
                style="@style/TextInputEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_gender"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="27dp"
            android:paddingStart="5dp"
            android:text="@string/setting_gender"
            android:textColor="@color/gray_4" />

        <RelativeLayout
            android:id="@+id/rv_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_gender_choice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/gray_4"
                android:paddingStart="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="8dp"
                android:text="@string/setting_gender_hint"
                android:textSize="18sp" />
            <ImageView
                android:id="@+id/iv_gender_ck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_setting_check"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="10dp"
                android:layout_alignEnd="@+id/tv_gender_choice"
                android:visibility="invisible"
                />
        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray_4"
            android:src="@drawable/ic_setting_line"

            />

        <TextView
            android:id="@+id/tv_birth"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="27dp"
            android:paddingStart="5dp"
            android:text="@string/setting_birth"
            android:textColor="@color/gray_4"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_birth"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/white"
            android:hint="@string/setting_birth_hint"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_birth"
                style="@style/TextInputEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:paddingStart="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_complete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/ic_setting_no_complete"
        android:gravity="center"
        android:text="@string/setting_next"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_setting" />

</androidx.constraintlayout.widget.ConstraintLayout>