<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bg_camera_dialog"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tv_img_fromAlbum"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:gravity="center"
            android:text="@string/profile_img_fromAlbum"
            android:textSize="18sp"
            android:textColor="@drawable/ic_camera_dialog_text"
            android:fontFamily="@font/pretendard_medium"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@color/gray_3" />


        <TextView
            android:id="@+id/tv_img_basic"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:gravity="center"
            android:text="@string/profile_img_basic"
            android:textSize="18sp"
            android:textColor="@drawable/ic_camera_dialog_text"
            android:fontFamily="@font/pretendard_medium"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@color/gray_3" />

        <TextView
            android:id="@+id/tv_img_cancel"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:gravity="center"
            android:text="@string/profile_img_cancel"
            android:textSize="18sp"
            android:textColor="@drawable/ic_camera_dialog_text"
            android:fontFamily="@font/pretendard_medium"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>