<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_gpt_choice"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pretendard_regular"
            android:paddingHorizontal="100dp"
            android:paddingVertical="15dp"
            android:textSize="14sp"
            android:textColor="@color/main_pink"
            android:text="@string/gpt_summary"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray_3"
            />
        <TextView
            android:id="@+id/tv_translation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pretendard_regular"
            android:paddingHorizontal="100dp"
            android:paddingVertical="15dp"
            android:textSize="14sp"
            android:textColor="@color/main_pink"
            android:text="@string/gpt_translation"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray_3"
            />
        <TextView
            android:id="@+id/tv_keyword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pretendard_regular"
            android:paddingHorizontal="100dp"
            android:paddingVertical="15dp"
            android:textColor="@color/main_pink"
            android:textSize="14sp"
            android:text="@string/gpt_keyword"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>